Fix image alignment

--- a/styles.css
+++ b/styles.css
@@ -75,13 +75,14 @@ body {
 .hero-right {
     display: flex;
     align-items: center;
-    flex: 1;
+    flex: initial;
 }
 
 
 .hero-right img {
     object-fit: contain;
     max-width: 500px;
+       
 }
 
 .information {
